# rr

./: Cargo.toml  README.md
src/: chunked.rs  client.rs  connection.rs  decompression.rs  error.rs  headers.rs  lib.rs  proxy.rs  proxy_old.rs  request.rs  response.rs  tls.rs  utils.rs
src/client/: builder.rs  mod.rs  model.rs  types.rs
src/connection/: connection.rs  mod.rs  proxy.rs  tls.rs
src/headers/: builder.rs  constants.rs  map.rs  mod.rs
src/request/: builder.rs  mod.rs  model.rs  types.rs
tests/: integration_test.rs
