[package]
name = "rt-1"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23"
webpki-roots = "0.26"
rustls-pemfile = "2.1"
thiserror = "2.0.16"
urlencoding = "2.1.3"
bytes = "1.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
url = "2.5.6"
