[package]
name = "rr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs", "ring"] }
webpki-roots = "0.26"
async-trait = "0.1"
thiserror = "2.0.16"
urlencoding = "2.1.3"
bytes = "1.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
url = "2.5.6"
futures-util = "0.3"
flate2 = "1.0"

